Dashboard com visualização Kankan em tempo real

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -182,7 +182,8 @@ body::-webkit-scrollbar-thumb:hover,
 
 .listsBtn .md-button-content {
     top: 3px;
-    color: var(--cor-bg-principal);
+    color: #3e3e3e;
+    /* color: var(--cor-bg-principal); */
 }
 
 .listsBtn .md-button-content .fa-ellipsis-v {
@@ -309,6 +310,23 @@ input :focus {
     font-family: 'Poppins', Sans-serif;
 }
 
+.ql-editor blockquote,
+.ql-editor h1,
+.ql-editor h2,
+.ql-editor h3,
+.ql-editor h4,
+.ql-editor h5,
+.ql-editor h6,
+.ql-editor ol,
+.ql-editor p,
+.ql-editor pre,
+.ql-editor ul {
+    margin: 0;
+    padding: 0;
+    color: #3e3e3e;
+    counter-reset: list-1 list-2 list-3 list-4 list-5 list-6 list-7 list-8 list-9;
+}
+
 .logo {
     width: 100%;
     opacity: 0.9!important;
@@ -323,12 +341,6 @@ input :focus {
     font-family: 'Poppins', Sans-serif;
     opacity: 0.9;
     font-size: 1.50rem;
-}
-
-.site {
-    color: var(--white);
-    padding-top: 15px;
-    opacity: 0.9;
 }
 
 .card {
@@ -1873,82 +1885,6 @@ input[type="file"] {
 
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
-html {
-    line-height: 1.15;
-    -webkit-text-size-adjust: 100%
-}
-
-body {
-    margin: 0
-}
-
-main {
-    display: block
-}
-
-h1 {
-    font-size: 2em;
-    margin: .67em 0
-}
-
-hr {
-    box-sizing: content-box;
-    height: 0;
-    overflow: visible
-}
-
-pre {
-    font-family: monospace, monospace;
-    font-size: 1em
-}
-
-a {
-    background-color: transparent
-}
-
-abbr[title] {
-    border-bottom: none;
-    text-decoration: underline;
-    -webkit-text-decoration: underline dotted;
-    text-decoration: underline dotted
-}
-
-b,
-strong {
-    font-weight: bolder
-}
-
-code,
-kbd,
-samp {
-    font-family: monospace, monospace;
-    font-size: 1em
-}
-
-small {
-    font-size: 80%
-}
-
-sub,
-sup {
-    font-size: 75%;
-    line-height: 0;
-    position: relative;
-    vertical-align: baseline
-}
-
-sub {
-    bottom: -.25em
-}
-
-sup {
-    top: -.5em
-}
-
-img {
-    border-style: none
-}
-
 button,
 input,
 optgroup,
@@ -2054,22 +1990,6 @@ template {
     display: none
 }
 
-blockquote,
-dd,
-dl,
-figure,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-hr,
-p,
-pre {
-    margin: 0
-}
-
 button {
     background-color: transparent;
     background-image: none
@@ -2140,21 +2060,6 @@ button {
 
 table {
     border-collapse: collapse
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-    font-size: inherit;
-    font-weight: inherit
-}
-
-a {
-    color: inherit;
-    text-decoration: inherit
 }
 
 button,
@@ -19914,7 +19819,8 @@ video {
 }
 
 .tracking-wide {
-    letter-spacing: .025em
+    letter-spacing: .025em;
+    margin: 0;
 }
 
 .tracking-wider {
